--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body{
 .home{
   width:100%;
   min-height: 100vh;
-  background-image: url(images/catcyber.jpg);
+  background-image: url(./catcyber.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
