--- a/style.css
+++ b/style.css
@@ -223,10 +223,11 @@ transition: color 0.5s ease-in-out;
   font-size: 18px;
   margin-bottom: 30px;
 }
-.mini-portfolio-container .mini-portfolio-group{
+ .mini-portfolio-group{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 20px;
   width: 100%;
 }
 .mini-portfolio{
@@ -759,14 +760,14 @@ footer a i:active{
       position: relative;
       transition: 1s;
     }
-.mini-portfolio-container{
+.mini-portfolio-group{
   overflow-x: scroll;
 }
 .mini-portfolio{
   margin-right: 65px;
   box-shadow: 0px 0px 0px;
 }
-.mini-portfolio-container::-webkit-scrollbar{
+.mini-portfolio-group::-webkit-scrollbar{
   display: none;
   }
   .about{
