--- a/style.css
+++ b/style.css
@@ -166,13 +166,13 @@ body{
   display: grid;
   place-items: center;
   gap:30px;
-  grid-template-columns:repeat(3 , 1fr);
+  grid-template-columns:repeat(3, 1fr);
  position: relative;
 }
 
 .Portfolio{
   width:230px;
-  height: auto;
+  height: 300px;
   background-color:var(--light-color);
   margin: 30px;
   box-shadow: 2px 2px 12px;
@@ -188,7 +188,6 @@ body{
   min-height: 150px;
   position:relative;
   top:-30px;
-
 }
 .portfolio_text{
 padding: 10px;
@@ -198,6 +197,7 @@ text-align:left;
 color:rgb(60, 89, 255);
 font-weight:700;
 position: relative;
+margin-bottom:5px;
 left: 30px;
 top: 10px;
 transition: color 0.5s ease-in-out;
@@ -211,7 +211,7 @@ transition: color 0.5s ease-in-out;
   width: 100%;
   height: auto;
   background-color: var(--deep-color);
-  padding: 30px 30px 30px;
+  padding: 30px 0px 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
