--- a/style.css
+++ b/style.css
@@ -190,9 +190,13 @@ body{
   top:-30px;
 }
 .portfolio_text{
-padding: 10px;
-text-align:left;
-}
+  padding: 10px;
+  text-align:left;
+  position: relative;
+  font-size: 12px;
+  line-height: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  }
 .portfolio_link a{
 color:rgb(60, 89, 255);
 font-weight:700;
@@ -721,7 +725,7 @@ footer a i:active{
   .home-text p{
     color: hsla(0, 0%, 93%, 0.836);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 21px;
+    font-size: 18px;
     font-weight: 600;
     display: block;
   }
