--- a/facebook-style.css
+++ b/facebook-style.css
@@ -51,6 +51,7 @@ nav{
     align-items: center;
 }
 .nav-left ul{
+display: flex;
 margin-left:30px ;
 }
 .nav-left ul li{
@@ -288,22 +289,22 @@ width: fit-content;
     font-size: 14px;
 }
 .story-gallery .story.story1{
-    background-image:linear-gradient(to top,transparent,rgba(0, 0, 0, 0.5)),url(images/story-1.jpg);
+    background-image:linear-gradient(to top,transparent,rgba(0, 0, 0, 0.5)),url(story-1.jpg);
 }
 .story2{
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.5)),url(images/story-2.jpg);
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.5)),url(story-2.jpg);
    
 }
 .story3{
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.5)),url(images/story-3.jpg);
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.5)),url(story-3.jpg);
    
 }
 .story4{
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.5)),url(images/story-4.jpg);
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.5)),url(story-4.jpg);
    
 }
 .story5{
-    background-image: linear-gradient(transparent,rgba(0,0,0,0.5)),url(images/story-5.jpg);
+    background-image: linear-gradient(transparent,rgba(0,0,0,0.5)),url(story-5.jpg);
    
 }
 .story.story1 img{
@@ -731,7 +732,7 @@ nav{
     width: 110px;
     margin-right: 20px;
 }
-.nav-left ul li img{
+.nav-left ul li i{
     width: 20px;
     margin:0 8px;
 }
