--- a/image-search-style.css
+++ b/image-search-style.css
@@ -84,8 +84,8 @@ form button{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     form{
-        width: 70%;
-        margin: auto;
+        width: 60%;
+        margin: 0px 20px 0px;
         height: 35px;
         background:rgb(228, 228, 253);
         display: flex;
@@ -100,14 +100,14 @@ form button{
         background: transparent;
         color: rgb(0, 0, 0);
         font-size: 16px;
-        padding: 10px;
+        padding: 0 10px;
     }
     form button{
-        padding: 0 40px;
+        padding: 0 20px;
         height: 100%;
         background:#ff3929 ;
         color: white;
-        font-size: 18px;
+        font-size: 16px;
         border: 0;
         outline: 0;
         border-top-right-radius: 37px;
