--- a/calculator.css
+++ b/calculator.css
@@ -64,3 +64,20 @@ form input.operator{
     color: aqua;
 }
 
+@media screen and (max-width: 768px){
+    .calculator{
+        
+    }
+    form input{
+        width: 50px;
+        height: 50px;
+        font-size: 15px;
+    }
+    form .display input{
+        font-size: 30px;
+    }
+    form input.egual{
+        width: 100px;
+    }
+  
+}
