--- a/calculator.css
+++ b/calculator.css
@@ -6,12 +6,22 @@
     box-sizing: border-box;
 
   }
+  section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
   section h2{
     text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    color: #292929;
+    margin: 15px 0px;
   }
 .container{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    padding: 0px 20px;
     text-align: center;
     display: flex;
     align-items: center;
@@ -65,14 +75,22 @@ form input.operator{
 }
 
 @media screen and (max-width: 768px){
+    section{
+        padding: 30px;
+    }
+ .container{
+  padding: 0px 30px;
+    }
     .calculator{
-        
     }
-    form input{
-        width: 50px;
-        height: 50px;
-        font-size: 15px;
-    }
+    .calculator form input{
+
+        height:50px;
+        width:50px;
+        font-size: 18px;
+        margin: 8px;
+        }
+
     form .display input{
         font-size: 30px;
     }
