--- a/calculator.css
+++ b/calculator.css
@@ -7,6 +7,8 @@
 
   }
   section{
+    width: 100%;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
