--- a/calculator.css
+++ b/calculator.css
@@ -33,7 +33,7 @@
 .calculator{
     background-color: rgb(31, 31, 31);
     padding: 20px;
-    width: fit-content;
+    width: 400px;
   
 }
 .calculator form input{
@@ -78,10 +78,10 @@ form input.operator{
 
 @media screen and (max-width: 768px){
     section{
-        padding: 30px;
+        padding: 30px 60px;
     }
  .container{
-  padding: 0px 100px;
+ width: 100%;
     }
     .calculator{
       width: 330px;
