--- a/to-do-app-style.css
+++ b/to-do-app-style.css
@@ -18,7 +18,7 @@
     text-align: center;
     font-family: zilla slab,'Segoe UI', Tahoma, Geneva, Verdana, sans-serif,Arial, Helvetica, sans-serif;
     font-size: 40px;
-    margin-top: 100px;
+    margin-top: 40px;
 }
 .todo-app{
     width: 100%;
@@ -103,16 +103,30 @@ ul li span:hover{
 }
 @media screen and (max-width: 780px){
     .todo-app{
-        padding: 30px 20px;
+        padding: 20px 20px;
+    }
+    .container .title{
+        color: #e9e9e9;  font-family: zilla slab,'Segoe UI', Tahoma, Geneva, Verdana, sans-serif,Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        margin-top: 20px 0 0;
     }
     .container{
-        padding: 60px;
+        padding: 20px;
     }
-    .row{
-        padding-left: 10px;
+    .todo-app h2{
+        color: #002765;
+        display: block;
+        align-items: center;
+        margin-bottom: 10px;
+        font-size: 18px;
+        }
+    .row button{
+        padding: 8px 24px;
+        font-size: 16px;
+
     }
     ul li{
-        font-size: 16px;
+        font-size: 12px;
     }
     ul li span{
         font-size: 20px;
