--- a/calculator.css
+++ b/calculator.css
@@ -79,11 +79,18 @@ form input.operator{
     section{
         padding: 30px 60px;
     }
+    section h2{
+      text-align: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 30px;
+      color: #292929;
+      margin: 15px 0px;
+    }
  .container{
  width: 100%;
     }
     .calculator{
-      width: 350px;
+      width: 650px;
     }
     .calculator form input{
         height:50px;
