--- a/calculator.css
+++ b/calculator.css
@@ -33,6 +33,7 @@
     background-color: rgb(31, 31, 31);
     padding: 20px;
     width: 400px;
+    text-align: center;
   
 }
 .calculator form input{
@@ -82,7 +83,7 @@ form input.operator{
     section h2{
       text-align: center;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      font-size: 30px;
+      font-size: 23px;
       color: #292929;
       margin: 15px 0px;
     }
@@ -90,7 +91,7 @@ form input.operator{
  width: 100%;
     }
     .calculator{
-      width: 650px;
+      width: 350px;
     }
     .calculator form input{
         height:50px;
@@ -103,7 +104,7 @@ form input.operator{
         font-size: 30px;
     }
     form input.egual{
-        width: 100px;
+        width: 120px;
     }
   
 }
