--- a/calculator.css
+++ b/calculator.css
@@ -78,20 +78,20 @@ form input.operator{
 
 @media screen and (max-width: 768px){
     section{
-        padding: 30px 60px;
+        padding: 20px 30px;
     }
     section h2{
       text-align: center;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      font-size: 23px;
+      font-size: 30px;
       color: #292929;
-      margin: 15px 0px;
+      margin: 15px 0px 20px;
     }
  .container{
  width: 100%;
     }
     .calculator{
-      width: 350px;
+      width: 550px;
     }
     .calculator form input{
         height:50px;
