--- a/style.css
+++ b/style.css
@@ -527,37 +527,34 @@ form .second-col .btn:hover{
   color:white;
 }
 footer{
-  width:100%;
-  height:  50px;
-  padding: 0px 50px 0px;
-  background-color: rgb(37, 37, 37);
-  color:white;
-  letter-spacing: 2px;
+  width: 100%;
+  height: 30px;
+  background-color:rgba(27, 27, 27, 0.877);
+  color: #ffffff;
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  align-items: center;  
+  padding: 20px;
+  font-family : 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif Arial, Helvetica, sans-serif, sans-serif;
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
 }
-
-footer h2 {
-  font-size:10px;
-  color:rgb(255, 255, 255);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, Helvetica, sans-serif;
+footer h2{
+  letter-spacing: 1px;
+  font-size: 15px;
+  
 }
 footer a{
-  color:var(--main-color);
-  padding:10px;
-  height: 100%;
-  border-radius:2px;
-  background-color:white;
-}
-footer a i{
   font-size: 15px;
-}
-footer a i:active{
-  color:rgb(0, 162, 255);
-  background-color: white;
+  color: var(--main-color);
+  text-decoration: none;
+  font-weight: 500;
+  padding: 5px;
+  background: white;
+  border-radius: 2px;
+  height: 30px;
+  text-align: center;
+  cursor: pointer;
 }
 .cn-container{
   background-color:var(--light-color);
@@ -895,16 +892,25 @@ footer a i:active{
   .social_media a div p{
     font-size: 10px;
   }
+
+
   footer{
-  
-    padding: 0px 40px 0px;
-    height: 30px;
+    width: 100%;
+    height: 25px;
   }
-
   footer h2{
+    letter-spacing: 1px;
     font-size: 8px;
-  }
-
-
     
+  }
+  footer a{
+    margin-right: 20px;
+    font-size: 8px;
+    font-weight: 500;
+    padding: 2px;
+    background: white;
+    border-radius: 2px;
+    height: 20px;
+
+  }
 }
