--- a/style.css
+++ b/style.css
@@ -396,6 +396,7 @@ text-align: left;
   cursor: pointer;
   border: 1px solid rgb(60, 89, 255);;
   transition: 1s;
+  animation: floatText 3s ease-in-out infinite;
  }
  .ask-question .btn:hover{
   background-color:rgb(40, 140, 255);
